{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 17,
  "lineage": "7875c1c2-9fe8-ebcb-9d05-6085bb892d54",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040c33c6a51fd5d96",
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:instance/i-01402cb5c9638b6c6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01402cb5c9638b6c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kosta_edu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e3dd2621c9081a8f",
            "private_dns": "ip-10-0-10-109.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.109",
            "public_dns": "ec2-43-202-47-208.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.47.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "sample-ec2-01"
                },
                "tags_all": {
                  "Name": "sample-ec2-01"
                },
                "throughput": 125,
                "volume_id": "vol-0cc53a65079117945",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05b8b0dd7c40eed07",
            "tags": {
              "Name": "sample-ec2-01"
            },
            "tags_all": {
              "Name": "sample-ec2-01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047421ff5a2d63525"
            ]
          },
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_subnet.sample-subnet-public-01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample-ec2-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040c33c6a51fd5d96",
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:instance/i-0a92962c1f60cd02b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a92962c1f60cd02b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "kosta_edu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07144ffe80c1f18f8",
            "private_dns": "ip-10-0-20-49.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.49",
            "public_dns": "ec2-54-180-2-136.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.2.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "sample-ec2-02"
                },
                "tags_all": {
                  "Name": "sample-ec2-02"
                },
                "throughput": 125,
                "volume_id": "vol-05057d71b729fd977",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0016d26aabcf02bd3",
            "tags": {
              "Name": "sample-ec2-02"
            },
            "tags_all": {
              "Name": "sample-ec2-02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-047421ff5a2d63525"
            ]
          },
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_subnet.sample-subnet-public-02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sample-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:internet-gateway/igw-0c969b9a6f78d45f7",
            "id": "igw-0c969b9a6f78d45f7",
            "owner_id": "195275673211",
            "tags": {
              "Name": "sample-igw"
            },
            "tags_all": {
              "Name": "sample-igw"
            },
            "vpc_id": "vpc-0aee8971376d6d110"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "sample-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c969b9a6f78d45f7",
            "id": "r-rtb-07ecc62f9fcd203251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07ecc62f9fcd20325",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sample-igw",
            "aws_route_table.sample-rt-public",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:route-table/rtb-07ecc62f9fcd20325",
            "id": "rtb-07ecc62f9fcd20325",
            "owner_id": "195275673211",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sample-rt-public"
            },
            "tags_all": {
              "Name": "sample-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aee8971376d6d110"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sample-rt-public-associate-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f81f8f8399fe472",
            "route_table_id": "rtb-07ecc62f9fcd20325",
            "subnet_id": "subnet-05b8b0dd7c40eed07"
          },
          "dependencies": [
            "aws_route_table.sample-rt-public",
            "aws_subnet.sample-subnet-public-01",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sample-rt-public-associate-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff659af3156a461f",
            "route_table_id": "rtb-07ecc62f9fcd20325",
            "subnet_id": "subnet-0016d26aabcf02bd3"
          },
          "dependencies": [
            "aws_route_table.sample-rt-public",
            "aws_subnet.sample-subnet-public-02",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample-sg-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:security-group/sg-047421ff5a2d63525",
            "description": "for load balancer",
            "egress": [],
            "id": "sg-047421ff5a2d63525",
            "ingress": [],
            "name": "sample-sg-elb",
            "name_prefix": "",
            "owner_id": "195275673211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sample-sg-elb"
            },
            "tags_all": {
              "Name": "sample-sg-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aee8971376d6d110"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-elb-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for http",
            "from_port": 80,
            "id": "sgrule-3736063433",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-047421ff5a2d63525",
            "security_group_rule_id": "sgr-0e1725ca226fabfb2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-elb-inbound2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for ssh",
            "from_port": 22,
            "id": "sgrule-1747292284",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-047421ff5a2d63525",
            "security_group_rule_id": "sgr-057c3d455d9d9f728",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-elb-inbound3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for https",
            "from_port": 443,
            "id": "sgrule-1506700887",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-047421ff5a2d63525",
            "security_group_rule_id": "sgr-0e36870ca82e9e608",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-elb-inbound4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for backend",
            "from_port": 8080,
            "id": "sgrule-268146686",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-047421ff5a2d63525",
            "security_group_rule_id": "sgr-0be19f48e453ce500",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sample-sg-elb-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outbound",
            "from_port": 0,
            "id": "sgrule-3406996985",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-047421ff5a2d63525",
            "security_group_rule_id": "sgr-07e90b9239f8d9568",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sample-sg-elb",
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-public-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:subnet/subnet-05b8b0dd7c40eed07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b8b0dd7c40eed07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275673211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-public-01"
            },
            "tags_all": {
              "Name": "sample-subnet-public-01"
            },
            "vpc_id": "vpc-0aee8971376d6d110"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample-subnet-public-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:subnet/subnet-0016d26aabcf02bd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0016d26aabcf02bd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "195275673211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet-public-02"
            },
            "tags_all": {
              "Name": "sample-subnet-public-02"
            },
            "vpc_id": "vpc-0aee8971376d6d110"
          },
          "dependencies": [
            "aws_vpc.sample-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:195275673211:vpc/vpc-0aee8971376d6d110",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e3862db2396c075e",
            "default_route_table_id": "rtb-08ce318a0a661029d",
            "default_security_group_id": "sg-0bb9fc2f5772f851d",
            "dhcp_options_id": "dopt-01dd74809c504a486",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aee8971376d6d110",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ce318a0a661029d",
            "owner_id": "195275673211",
            "tags": {
              "Name": "sample-vpc"
            },
            "tags_all": {
              "Name": "sample-vpc"
            }
          }
        }
      ]
    }
  ]
}